fix: adjust the `s-art-front` letter-spacing to be readable

--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@ header nav ul li a:hover {
 .s-art-front .title-text p {
 	color: var(--gray-600);
 	margin-top: 1.6rem;
-	letter-spacing: -0.54rem;
+	letter-spacing: -0.54px;
 }
 
 .s-art-front .title-text .left {
